--- a/views/books.ejs
+++ b/views/books.ejs
@@ -41,7 +41,7 @@
               
               <div class="book-actions">
                 <a href="/books/<%= book.id %>" class="button view-button">View</a>
-                <form action="/books/delete/<%= book.id %>" method="POST" style="display:inline;">
+                <form action="/books/<%= book.id %>/delete" method="POST" style="display:inline;">
                   <button type="submit" class="button delete-button" onclick="return confirm('Are you sure you want to delete this book?');">Delete</button>
                 </form>
               </div>
